fixed alignment error

--- a/css/index.css
+++ b/css/index.css
@@ -156,7 +156,7 @@ header .logo {
 }
 
 .main-content .top-content .text-content {
-  width: 50%;
+  width: 45%;
   display: inline-block;
   margin-right: 34px;
 }
